--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ h1, h2 {
 
 .section-padding {
   padding-top: 90px;
-  padding-bottom: 90px;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-bottom: 50px;
+  padding-left: 90px;
+  padding-right: 90px;
 }
 
 .profile-photo{
@@ -44,12 +44,9 @@ h1, h2 {
 .footer-container{
     padding: 3rem 2rem;
     text-align: center;
-    background-color: #1F2833;
      bottom: 0;
      width: 100%;
-     backdrop-filter: blur(10px) brightness(150%) saturate(120%);
-     background-color: rgba(255, 255, 255, 0.25);
-
+     background-color: #1F2833;
     }
 
     .copyright {
@@ -100,10 +97,6 @@ h1, h2 {
 
 }
 
-#contact{
-  background-color: #1F2833;
-  
-}
 
 /* Button */
 .tech-button{
@@ -171,8 +164,9 @@ h1, h2 {
     border-radius: 6px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(69, 68, 68, 0.24);
     transition: all 0.3s;
-    backdrop-filter: blur(10px) brightness(150%) saturate(120%);
-    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(10px) brightness(200%) saturate(120%);
+    background-color: rgba(255, 255, 255, 0.11);
+
 
   }
   
@@ -187,9 +181,8 @@ h1, h2 {
   text-align: center;
   height: 100%;
   padding: 3rem 3rem 3rem 3rem;
-  backdrop-filter: blur(10px) brightness(150%) saturate(120%);
-  background-color: rgba(255, 255, 255, 0.25);
-
+  backdrop-filter: blur(10px) brightness(200%) saturate(120%);
+  background-color: rgba(255, 255, 255, 0.11);
 }
 
 /* Research */
@@ -226,8 +219,9 @@ h1, h2 {
 
 .aboutme-container{
   background-color: #1F2833;
-  backdrop-filter: blur(10px) brightness(150%) saturate(120%);
-  background-color: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(10px) brightness(200%) saturate(120%);
+  background-color: rgba(255, 255, 255, 0.11);
+
 }
 
 /* Back to top button */
@@ -237,7 +231,7 @@ h1, h2 {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: transparent;
+  background-color: #3bba9c;
   color: white;
   height: 2.5em;
   width: 2.5em;
@@ -248,6 +242,11 @@ h1, h2 {
   z-index: 1000;
 }
 
-.back-to-top:hover {
-  background-color: #008d80;
+/* contact me */
+
+#contact {
+
+  backdrop-filter: blur(10px) brightness(200%) saturate(120%);
+  background-color: rgba(255, 255, 255, 0.11);
+
 }
