--- a/style.css
+++ b/style.css
@@ -306,6 +306,14 @@ h1, h2 {
     padding: 0.5em 0.5em; 
     white-space: nowrap;
     width: auto; 
+    
+  .back-to-top {
+    height: 2em;
+    width: 2em;
+    font-size: 20px;
+    bottom: 10px;
+    right: 10px;
+  }
 }
 
 
