--- a/style.css
+++ b/style.css
@@ -276,7 +276,6 @@ h1, h2 {
 
   .tech-button {
     width: 100%;
-    height: 100%;
   }
 
   .card {
@@ -296,8 +295,11 @@ h1, h2 {
     padding-left: 20px;
     padding-right: 20px;
   }
-    .card {
+
+  .education-card {
+    padding: 2rem;
     margin-bottom: 30px; 
+  }
 }
 
 
